--- a/wp-content/themes/bard/style.css
+++ b/wp-content/themes/bard/style.css
@@ -3147,8 +3147,91 @@ Changes for erasing existing styles
   display: none;
 }
 
+.scrolltop {
+  text-align: center;
+  width: 100%;
+  margin-top: 60px;
+}
+
 #page-footer .footer-copyright{
+  height: 100%;
   background-color: #161a2d;
+  padding: 0;
+}
+
+#page-footer {
+  height: 300px;
+}
+
+#page-footer a {
+  color: #ffa112 !important;
+}
+
+#page-footer a:hover {
+  color: #00a9ff !important;
+}
+
+.page-footer-inner {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+}
+
+.footer-nav {
+  display: flex;
+  flex-direction: column;
+}
+
+.footer-main-container {
+  display: flex;
+  color: #FFFFFF;
+  text-align: center;
+}
+
+.footer-nav-title {
+  text-transform: uppercase;
+  font-size: 1.4rem;
+  padding: 30px 0;
+}
+
+.footer-panel {
+  flex-grow: 1;
+}
+
+.footer-left-panel {
+  text-transform: uppercase;
+  text-align: left;
+}
+
+.footer-right-panel {
+  text-align: right;
+}
+
+.footer-town {
+  max-width: 280px;
+  margin: auto;
+  line-height: 2rem;
+}
+
+.footer-info {
+  text-transform: uppercase;
+}
+
+.footer-tel {
+  font-size: 2rem;
+  line-height: 3rem;
+  color: #ffa112;
+}
+
+.copyright-info {
+  display: none;
+}
+
+.legal-terms {
+  color: #FFFFFF;
+  font-size: 12px;
+
 }
 
 .current-menu-item {
