--- a/wp-content/themes/bard/style.css
+++ b/wp-content/themes/bard/style.css
@@ -412,6 +412,10 @@ html {
   padding: 0 !important;
 }
 
+#custom-img-serrurerie img {
+  margin: 50px auto 0;
+}
+
 .main-content {
   padding-top: 40px;
   padding-bottom: 92px;
